change to blog site

--- a/index.html
+++ b/index.html
@@ -2,10 +2,102 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <title> css-cersise </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
+
   <body>
+
+
+    <div class="container">
+
+      <header id="header">
+        <a class="logo" href="index.html">css-cercise</a>
+        <nav>
+          <a href="menu">Menu</a>
+        </nav>
+      </header>
+
+      <nav id="menu">
+        <ul class="links">
+          <li> <a href="index.html">Home</a></li>
+          <li> <a href="series1.html">Series 1</a></li>
+          <li> <a href="series2.html">Series 2</a></li>
+          <li> <a href="contact.html">Contact</a> </li>
+        </ul>
+      </nav>
+
+
+      <div class="item">
+        <div class="tooltip"> <img src="images/one.jpg" alt="one">
+          <span class="tooltiptext"> </span>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="tooltip"> <img src="images/two.jpg" alt="two">
+          <span class="tooltiptext"> </span>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="tooltip"> <img src="images/three.jpg" alt="three">
+          <span class="tooltiptext"> </span>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="tooltip"> <img src="images/four.jpg" alt="four">
+          <span class="tooltiptext"> </span>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="tooltip"> <img src="images/five.jpg" alt="five">
+          <span class="tooltiptext"> </span>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="tooltip"> <img src="images/six.jpg" alt="six">
+          <span class="tooltiptext"> </span>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="tooltip"> <img src="images/seven.jpg" alt="seven">
+          <span class="tooltiptext"> </span>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="tooltip"> <img src="images/eight.jpg" alt="eight">
+          <span class="tooltiptext"> </span>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="tooltip"> <img src="images/nine.jpg" alt="nine">
+          <span class="tooltiptext"> </span>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="tooltip"> <img src="images/ten.jpg" alt="ten">
+          <span class="tooltiptext"> </span>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="music">
+      <img src="images/lp.gif" alt="lp.gif">
+      <iframe width="560" height="10" src="https://www.youtube.com/embed/CiTbFgyxyHY?autoplay=1&loop=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </div>
+
+
 
   </body>
 </html>
