website link fix

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
           Chicago-Seoul based graphic designer / painter / illustrator <br><br>
          <img src="images/mail.png" alt="mail"> djung7@artic.edu <br>
          <img src="images/instagram.png" alt="instagram"> @37dain_samchil <br>
-         <img src="images/world.png" alt="website"> <a href="thegreatdain.best">thegreatdain.best</a>
+         <img src="images/world.png" alt="website"> <a href="http://thegreatdain.best/">thegreatdain.best</a>
       </h2>
 
 
